//
//  JsonExampleUITests.swift
//  JsonExampleUITests
//
//  Created by Administrador on 29/11/19.
//  Copyright © 2019 Jacky Ortiz. All rights reserved.
//

import XCTest

class JsonExampleUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // UI tests must launch the application that they test.
        //let app = XCUIApplication()
        let app = XCUIApplication()
        app.launch()
        
        let views = app.tabBars
        views.textFields["Email"].tap()
        
        
        
        /*
        XCTAssertEqual(app.buttons.count, 1)
        app.textFields["Email"].tap()
        
        let logInButton = app.buttons["LOG IN "]
        logInButton.tap()
        app.secureTextFields["Password"].tap()
        logInButton.tap()
        app.textFields["Correo no valido"].tap()
        logInButton.tap()
        app.secureTextFields["Contraseña no valida"].tap()
        logInButton.tap()
        
        */
        
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
